Stop justify text align

--- a/index.sass
+++ b/index.sass
@@ -10,7 +10,7 @@ body
   padding: 60px 7px 30px 7px
 
   overflow-wrap: break-word
-  text-align: justify
+  // text-align: justify
 
   max-width: 630px
   margin: 0 auto
